Afegeix entorns de solució als dos últims exercicis

--- a/main.tex
+++ b/main.tex
@@ -44,6 +44,10 @@
     \end{enumerate}
   \end{exercise}
 
+  \begin{solution}
+    
+  \end{solution}
+
   \begin{exercise}[Primer parical, gener 2018]
     Siga $h: ]0, 2\pi[ \longrightarrow \RR$ una funció diferenciable i siga
     $\alpha ]0, 2\pi[ \longrightarrow \RR^2$ una corba parametritzada
@@ -70,4 +74,8 @@
       curvatura constant si i només si $k = 1$.
     \end{enumerate}
   \end{exercise}
+
+  \begin{solution}
+    
+  \end{solution}
 \end{document}
