--- a/tex/macros.tex
+++ b/tex/macros.tex
@@ -12,6 +12,7 @@
 \newcommand{\QQ}{\ensuremath{\mathbb{Q}}}
 \newcommand{\CC}{\ensuremath{\mathbb{C}}}
 \newcommand{\FF}{\ensuremath{\mathbb{F}}}
+\DeclareMathOperator{\re}{Re}
 \newcommand{\set}[1]{\ensuremath{\left\lbrace#1\right\rbrace}}
 \newcommand{\abs}[1]{\ensuremath{\left|#1\right|}}
 \newcommand{\norm}[1]{\ensuremath{\left\lVert#1\right\rVert}}
