--- a/tex/preamble.tex
+++ b/tex/preamble.tex
@@ -24,6 +24,10 @@
 %=== 'enumitem' package ===%
 \usepackage{enumitem}
 
+%=== 'tikz' package ===%
+\usepackage{tikz}
+\usetikzlibrary{babel}
+
 %=== Document title ===%
 \usepackage{titling}
 
@@ -73,9 +77,12 @@
 
 \usepackage{amssymb}
 
+\usepackage{cancel}
+
 %== Math environments ==%
 \usepackage{amsthm}
 \usepackage{thmtools}
+
 
 \declaretheoremstyle[
   headfont=\sffamily\bfseries\color{MediumBlue},
